--- a/LoginWithFirebaseApp/Home.storyboard
+++ b/LoginWithFirebaseApp/Home.storyboard
@@ -51,6 +51,9 @@
                                 <state key="normal" title="Logout">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
+                                <connections>
+                                    <action selector="tappedLogoutButton:" destination="7JH-61-oDm" eventType="touchUpInside" id="0dO-p3-5uG"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="tbO-Sr-UdR"/>
